[metadata]
name = gevent_grpc_monkey_patch
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Get gevent and grpc packages working together
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
install_requires =
    gevent>=1.2.0
    grpc>=1.0.0
